--- a/src/css/aside.css
+++ b/src/css/aside.css
@@ -24,7 +24,7 @@ aside {
 }
 
 #sidebar-header {
-  height: 280px;
+  height: 270px;
 }
 
 #sidebar-profile-img {
@@ -54,8 +54,21 @@ aside {
 }
 
 #sidebar-nav {
-  height: 260px;
+  height: 210px;
+  color: #a19e9e;
   font-family: "chosunsg";
+  padding: 20px;
+  letter-spacing: 2px;
+}
+
+.sidebar-nav-icon {
+  height: 12px;
+  filter: opacity(.5) drop-shadow(0 0 0 #a19e9e);
+}
+
+.sidebar-nav-item {
+  height: 35px;
+  font-weight: bold;
 }
 
 #sidebar-link {
