--- a/src/css/aside.css
+++ b/src/css/aside.css
@@ -75,6 +75,34 @@ aside {
   height: 70px;
 }
 
+#sidebar-link-header {
+  display: flex;
+  flex-basis: 100%;
+  align-items: center;
+  font-size: 12px;
+  color: #a19e9e;
+}
+
+#sidebar-link-header::before,
+#sidebar-link-header::after {
+  content: "";
+  flex-grow: 1;
+  background: #eeeeee;
+  height: 0.5px;
+  line-height: 0px;
+  margin: 0px 16px;
+}
+
+#sidebar-link-item {
+  display: inline-block;
+  padding: 10px;
+}
+
+.sidebar-link-icon {
+  height: 16px;
+  filter: opacity(.5) drop-shadow(0 0 0 #a19e9e);
+}
+
 #sidebar-copyright {
   height: calc(100% - 660px);
   min-height: 50px;
