--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -53,7 +53,6 @@ nav {
 }
 
 #sidebar-nav {
-  height: 210px;
   color: #a19e9e;
   font-family: "chosunsg";
   padding: 20px;
@@ -61,7 +60,12 @@ nav {
 }
 
 .sidebar-nav-icon {
+  float: left;
+  position: relative;
+  top: 6px;
   height: 12px;
+  width: 12px;
+  margin: 0 10px 0 30%;
   filter: opacity(.5) drop-shadow(0 0 0 #a19e9e);
 }
 
@@ -70,27 +74,19 @@ nav {
   font-weight: bold;
 }
 
+.sidebar-nav-name {
+  float: left;
+}
+
 #sidebar-link {
   height: calc(100% - 590px); 
   min-height: 70px;
 }
 
 #sidebar-link-header {
-  display: flex;
-  flex-basis: 100%;
-  align-items: center;
+  text-align: center;
   font-size: 12px;
   color: #a19e9e;
-}
-
-#sidebar-link-header::before,
-#sidebar-link-header::after {
-  content: "";
-  flex-grow: 1;
-  background: #eeeeee;
-  height: 0.5px;
-  line-height: 0px;
-  margin: 0px 16px;
 }
 
 #sidebar-link-item {
@@ -99,6 +95,7 @@ nav {
 }
 
 .sidebar-link-icon {
+  width: 16px;
   height: 16px;
   filter: opacity(.5) drop-shadow(0 0 0 #a19e9e);
 }
@@ -112,5 +109,6 @@ nav {
 #sidebar-mod-icon {
   position: relative;
   top: calc(50% - 8px);
+  width: 16px;
   height: 16px;
 }
