--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -23,22 +23,20 @@ nav {
 }
 
 #sidebar-header {
+  background: red;
+  width: 100%;
   height: 270px;
 }
 
 #sidebar-profile-img {
-  display: block;
-  position: relative;
   top: 40px;
-  left: 55px;
+  left: calc(50% - 60px);
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
 
 #sidebar-profile-name {
-  position: relative;
-  top: 55px;
   color: #416289;
   font-size: 24px;
   font-weight: bold;
@@ -46,13 +44,12 @@ nav {
 }
 
 #sidebar-profile-intro {
-  position: relative;
-  top: 60px;
   color: #a19e9e;
   font-family: "chosunsg";
 }
 
 #sidebar-nav {
+  background: blue;
   color: #a19e9e;
   font-family: "chosunsg";
   padding: 20px;
@@ -79,6 +76,7 @@ nav {
 }
 
 #sidebar-link {
+  background: green;
   height: calc(100% - 590px); 
   min-height: 70px;
 }
@@ -101,14 +99,15 @@ nav {
 }
 
 #sidebar-mod {
+  position: relative;
+  bottom: 0px;
+  background: yellow;
   align-items: center;
-  width: 230px;
+  width: 100%;
   height: 50px;
 }
 
 #sidebar-mod-icon {
-  position: relative;
-  top: calc(50% - 8px);
   width: 16px;
   height: 16px;
 }
