--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,9 @@
-#layout {
+.layout {
+  background: #efefef;
+  height: 100%;
+}
+.content {
+  float: left;
+  width: calc(100% - 235px);
   height: 100%;
 }
