--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,6 +1,43 @@
+@font-face {
+  font-family: "chosunsg";
+  src: url("ChosunSg.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .card {
   background: white;
   border-radius: 10px;
   box-shadow: 2px 2px #e5e2e2;
-  padding: 0 6px;
+  padding: 12px 20px;
+  margin: 10px;
+}
+
+.card:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 6px #e5e2e2;
+  transition: .3s;
+}
+
+.card-title {
+  font-size: 32px;
+  color: #5f5e5e;
+  font-weight: bold;
+}
+
+.card-content {
+  margin: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
+  height: 36px;
+  color: #5f5e5e;
+  font-size: 18px;
+  font-family: "chosunsg";
+}
+
+.card-date {
+  padding: 10px;
+  color: #5f5e5e;
+  font-size: 16px;
 }
