--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -66,11 +66,13 @@
   width: 160px;
   height: 60px;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .sidebar-nav-name {
   float: left;
   line-height: 35px;
+  color: #a19e9e;
 }
 
 .sidebar-link {
