--- a/src/styles/list_card.css
+++ b/src/styles/list_card.css
@@ -5,7 +5,7 @@
   font-style: normal;
 }
 
-.card {
+.list-card {
   background: white;
   border-radius: 10px;
   box-shadow: 2px 2px #e5e2e2;
@@ -13,19 +13,19 @@
   margin: 10px;
 }
 
-.card:hover {
+.list-card:hover {
   cursor: pointer;
   box-shadow: 0px 0px 10px 6px #e5e2e2;
   transition: .3s;
 }
 
-.card-title {
+.list-card-title {
   font-size: 32px;
   color: #5f5e5e;
   font-weight: bold;
 }
 
-.card-content {
+.list-card-content {
   margin: 5px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -36,7 +36,7 @@
   font-family: "chosunsg";
 }
 
-.card-date {
+.list-card-date {
   padding: 10px;
   color: #5f5e5e;
   font-size: 16px;
