--- a/src/styles/list_card.css
+++ b/src/styles/list_card.css
@@ -37,7 +37,18 @@
 }
 
 .list-card-date {
+  display: inline-block;
+  width: 35%;
   padding: 10px;
   color: #5f5e5e;
   font-size: 16px;
+}
+
+.list-card-category {
+  background: #5f5e5e;
+  display: inline-block;
+  width: 80px;
+  text-align: center;
+  border-radius: 8px;
+  color: white;
 }
