--- a/src/styles/list_card.css
+++ b/src/styles/list_card.css
@@ -29,8 +29,11 @@
   margin: 5px;
   text-overflow: ellipsis;
   overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   width: 100%;
-  height: 36px;
+  height: 34px;
   color: #5f5e5e;
   font-size: 18px;
   font-family: "chosunsg";
