--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,4 +10,7 @@ html, body, #___gatsby, #gatsby-focus-wrapper {
 h2 {
   margin: 0;
   color: #5f5e5e;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
