--- a/src/styles/searchbar.css
+++ b/src/styles/searchbar.css
@@ -1,24 +1,50 @@
 .searchbar {
-  position: absolute;
   float: left;
-  width: calc(100% - 235px);
-  padding: 5px 0px 3px 5px;
+  width: 800px;
+  margin: 12px 40px 0 40px;
+  text-align: center;
+}
+
+.searchbar-input {
+  display: inline-block;
 }
 
 .searchbar-button {
+  position: absolute;
+  display: inline-block;
   background: #e7e7e7;
   width: 30px;
   height: 30px;
+  margin: 0 10px;
   border-radius: 50%;
   border-color: #cfcfcf;
   border-style: solid;
   border-width: 1px;
 }
 
+.searchbar-button:hover {
+  cursor: pointer;
+  background: white;
+  transition: 1s;
+}
+
 .searchbar-icon {
   position: relative;
   top: calc(50% - 9px);
-  left: calc(50% - 9px);
   width: 18px;
   height: 18px;
+}
+
+.searchbar-results {
+  position: absolute;
+  background: white;
+  text-align: left;
+  width: 600px;
+  padding: 4px;
+  border: solid 1px #e5e2e2;
+}
+
+.searchbar-result {
+  height: 40px;
+  line-height: 40px;
 }
