--- a/src/styles/searchbar.css
+++ b/src/styles/searchbar.css
@@ -1,25 +1,53 @@
 .searchbar {
-  float: left;
-  width: 800px;
   margin: 12px 40px 0 40px;
-  text-align: center;
 }
 
+#toggle {
+  display: none;
+}
+
+.searchbar-search {
+  position: relative;
+  bottom: 31px;
+  width: 30px;
+  height: 30px;
+  margin: 0 10px;
+  z-index: -1;
+  transition: all 0.3s;
+}
 .searchbar-input {
-  display: inline-block;
+  display: block;
+  width: calc(100% - 4px);
+  height: calc(100% - 2px);
+  border: none;
+  border-right: 0;
 }
-
+.searchbar-input:focus {
+  outline: none;
+}
+#toggle:checked ~ .searchbar-button {
+  width: 780px;
+  background: white;
+}
+#toggle:checked ~ .searchbar-search {
+  left: 32px;
+  width: 600px;
+  z-index: 1;
+}
+#toggle:checked ~.searchbar-search > .searchbar-input {
+  background: red;
+}
 .searchbar-button {
-  position: absolute;
   display: inline-block;
   background: #e7e7e7;
   width: 30px;
   height: 30px;
   margin: 0 10px;
-  border-radius: 50%;
+  border-radius: 15px;
   border-color: #cfcfcf;
   border-style: solid;
   border-width: 1px;
+  transition: all 0.3s;
 }
 
 .searchbar-button:hover {
@@ -30,13 +58,15 @@
 
 .searchbar-icon {
   position: relative;
+  
   top: calc(50% - 9px);
+  left: 6px;
   width: 18px;
   height: 18px;
+  pointer-events: none;
 }
 
 .searchbar-results {
-  position: absolute;
   background: white;
   text-align: left;
   width: 600px;
