--- a/src/styles/list_card.css
+++ b/src/styles/list_card.css
@@ -16,7 +16,7 @@
 
 .list-card:hover {
   cursor: pointer;
-  box-shadow: 0px 0px 10px 6px #e5e2e2;
+  box-shadow: 0px 0px 10px 6px #292d3e;
   transition: .3s;
 }
 
@@ -36,7 +36,7 @@
   width: 100%;
   height: 35px;
   color: #5f5e5e;
-  font-size: 18px;
+  font-size: 17px;
   font-family: "chosunsg";
 }
 
