--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -14,7 +14,8 @@
 }
 
 .sidebar {
-  background: #F9F9F9;
+  color: white;
+  background: #292d3e;
   width: 230px;
   height: 100%;
   float: left;
@@ -42,13 +43,11 @@
 }
 
 .sidebar-profile-intro {
-  color: #a19e9e;
   font-family: "chosunsg";
   padding: 4px;
 }
 
 .sidebar-nav {
-  color: #a19e9e;
   font-family: "chosunsg";
   padding: 20px 35px 20px 35px;
   letter-spacing: 2px;
@@ -73,18 +72,27 @@
 .sidebar-nav-name {
   float: left;
   line-height: 35px;
-  color: #a19e9e;
+  color: white;
 }
 
 .sidebar-link {
-  height: calc(100% - 600px); 
-  min-height: 70px;
+  height: auto; 
 }
 
 .sidebar-link-header {
+  width: 100%;
+  height:20px;
   text-align: center;
   font-size: 12px;
-  color: #a19e9e;
+}
+
+.sidebar-link-header-item {
+  display: inline-block;
+  width: 32%;
+}
+
+.sidebar-link-header-item::after {
+  clear: both;
 }
 
 .sidebar-link-item {
@@ -96,15 +104,4 @@
   width: 16px;
   height: 16px;
   filter: opacity(.5) drop-shadow(0 0 0 #a19e9e);
-}
-
-.sidebar-mod {
-  align-items: center;
-  height: 50px;
-}
-
-.sidebar-mod-icon {
-  top: calc(50% - 8px);
-  width: 16px;
-  height: 16px;
 }
