--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,10 +7,14 @@ html, body, #___gatsby, #gatsby-focus-wrapper {
   text-decoration: none;
 }
 
-h2 {
+h1, h2, h3, h4 {
   margin: 0;
   color: #5f5e5e;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+p {
+  color: #5f5e5e;
 }
